--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -1,7 +1,7 @@
 <div>
-  <h3 class="page-header">
+  <!-- <h3 class="page-header">
     {{physical_id}}&nbsp;<small>{{ec2.public_ip}} </small>
-  </h3>
+  </h3> -->
 
   <div class="col-xs-12">
 
