--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,14 +20,14 @@
 
     <%= render partial: 'layouts/navbar_top' %>
 
-    <div class="container-fluid">
+    <div class="container">
         <div class="col-md-12 col-sm-12">
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
 
 
-      
+
 
     </div> <!-- /container -->
 
