--- a/app/views/infrastructures/_resource_tabs.html.erb
+++ b/app/views/infrastructures/_resource_tabs.html.erb
@@ -2,7 +2,8 @@
 <%# TODO: DRY %>
 
   <a href="#" v-for="ec2 in current_infra.resources.ec2_instances" :class="{active: tabpaneGroupID === ec2.physical_id}" @click="show_ec2(ec2.physical_id)" class="list-group-item">
-    <span class="label label-warning"><%= fa 'cube' %> {{screen_name(ec2)}}</span>&nbsp;
+    <span class="label label-warning"><%= fa 'cube' %> EC2</span>&nbsp;
+    <small>{{screen_name(ec2)}}</small>
     <small v-if="tabpane_active(ec2.physical_id)"><%= glyphicon 'refresh' %></small>
     <!-- workaround http://stackoverflow.com/questions/18730116/twitter-bootstrap-3-0-how-do-i-badge-badge-important-now -->
     <bootstrap-tooltip v-if="!ec2.serverspec_status" :title="serverspec_failed" class="badge progress-bar-danger">
