--- a/app/views/layouts/_navbar_bottom.html.erb
+++ b/app/views/layouts/_navbar_bottom.html.erb
@@ -1,12 +1,10 @@
 <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
   <div class="container">
-    
+
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
         <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+        <%= fa 'fa-caret-square-o-up fa-2x' %>
       </button>
       <a class="navbar-text btn btn-link btn-xs" href="http://www.skyarch.net/">&copy; 2013-2016 SKYARCH NETWORKS INC.</a>
       <span class="navbar-text btn-xs"><%= SkyHopper::Application.config.my_version %></span>
