--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -14,31 +14,27 @@
 
 <div id="indexElement" v-el:node>
 
-  <ul class="nav nav-tabs">
-    <li><input type="text" class="form-control" v-model="searchQuery" placeholder="<%= t 'infrastructures.search' %>"></li>
+  <div>
+    <div class="col-md-4"><input type="text" class="form-control" v-model="searchQuery" placeholder="<%= t 'infrastructures.search' %>"></div>
 
-    <li class="dropdown pull-right">
-          <a class="btn btn-danger btn-xs" data-method='delete'
-          href="/clients/{{picked.id}}?lang={{lang}}"
-          :class="{disabled: picked.code[1] > 0}" v-if="can_delete()">
-            <%= fa 'times text-danger' %>
-            <%= t 'common.btn.delete' %>
-          </a>
-    </li>
+    <div class="pull-right">
+      <a class="btn btn-danger btn-sm"
+      @click="delete_entry()"
+        :class="{disabled: picked.code[1] > 0}" v-if="can_delete()">
+          <%= fa 'times' %>
+          <%= t 'common.btn.delete' %>
+      </a>&nbsp
+    </div>
 
-    <li class="dropdown pull-right">
-      <a class="btn btn-default btn-xs"
+    <div class="pull-right">
+      <a class="btn btn-default btn-sm"
           v-bind:href="picked.edit_url"
           v-if="can_edit()">
           <span class='glyphicon glyphicon-edit'></span>
           <%= t 'helpers.links.edit' %>
-      </a>
-    </li>
-
-    <li class="dropdown pull-right">
-      <a class='btn btn-info btn-xs' href="/projects?lang={{lang}}&amp;client_id={{picked.id}}" v-if="picked" ><%= t 'helpers.links.show' %></a>
-    </li>
-  </ul>
+      </a>&nbsp
+    </div>
+  </div>
 
   <demo-grid
   :data="gridData"
